# CLearning

./: Cargo.toml  C语言基础.xmind  LICENSE  README.md  default_out.txt  info.toml
exercises/: C语言基础概念.md  HelloWorld.c
exercises/C程序基础结构/: exam.c  main函数.c  作用域.c
exercises/C程序基础结构/声明/: 基础类型变量声明01.c  标识符.c
exercises/C程序基础结构/语句/: 表达式语句.c
exercises/变量和常量/: 标识符.c
exercises/类型系统/基础类型/: char.c
exercises/类型系统/基础类型/整型/: int01.c  int02.c
exercises/输入与输出/printf/: printf01.c
src/: exercise.rs  main.rs  run.rs  ui.rs  verify.rs
