[package]
name = "clearning"
version = "0.1.0"
authors = ["a1393323447 <1393323447@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.5"
serde = {version = "1.0.10", features = ["derive"]}
indicatif = "0.10.3"
console = "0.7.7"
notify = "4.0.15"
clap = "2.32.0"
toml = "0.4.10"